test/expected/show_foo.out
show foo
     ^
6: error: "foo": not defined as type via define or typedef
